<resources>
    <string name="app_name">Alkewallet</string>
    <string name="registrarse_y_empezar_a_transferir">Registrarse y empezar a transferir</string>
    <string name="nombre_signuppage">Nombre</string>
    <string name="ingresar_nombre_signuppage">Ingresar nombre</string>
    <string name="apellido_signuppage">Apellido</string>
    <string name="ingresar_apellido_signuppage">Ingresar apellido</string>
    <string name="email_signuppage">Email</string>
    <string name="ingresar_email_signuppage">Ingresar email</string>
    <string name="contrase_a_signuppage">Contraseña</string>
    <string name="ingresar_tu_contrasenia_signuppage">Ingresar tu contraseña</string>
    <string name="title_reingresar_contrasenia_signuppage">Reingresar Contraseña</string>
    <string name="reingresar_contrase_a_signuppage">Reingresar contraseña</string>
    <string name="txt_inicio_homepage">Inicio</string>
    <string name="logea_y_empieza_a_transferir">Logea y empieza a transferir!</string>
    <string name="email">Email</string>
    <string name="ingresar_tu_email">Ingresar tu email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar_tu_contrase_a">Ingresar tu contraseña</string>
    <string name="olvidaste_tu_contrase_a">Olvidaste tu contraseña?</string>
    <string name="login">Login</string>
    <string name="crear_una_nueva_cuenta">Crear una nueva cuenta</string>
    <string name="enviar_dinero">Enviar Dinero</string>
    <string name="_124_57">$124,57</string>
    <string name="balance_total">Balance Total</string>
    <string name="hola_usuario">Hola, Usuario</string>
    <string name="ingresar_dinero">Ingresar Dinero</string>
    <string name="ultimas_transacciones">Ultimas transacciones</string>
    <string name="no_hay_transacciones_registradas">No hay transacciones registradas!</string>
    <string name="ingresar_dinero_requestpage">Ingresar Dinero</string>
    <string name="nombre_usuario_requestpage">Nombre Usuario</string>
    <string name="nombre_usuario666_gmail_com">nombre_usuario666@gmail.com</string>
    <string name="cantidad_a_ingresar_requestpage">Cantidad a ingresar</string>
    <string name="_20_00">20.00</string>
    <string name="notas_de_transferencia_requestpage">Notas de transferencia</string>
    <string name="agregar_notas_de_transferencia_opcional">Agregar notas de transferencia(opcional)</string>
    <string name="enviar_dinero_sendpage">Enviar Dinero</string>
    <string name="uncorreo_hotmail_com">uncorreo@hotmail.com</string>
    <string name="cantidad_a_transferir">Cantidad a transferir</string>
    <string name="_12_50">12.50</string>
    <string name="mi_perfil_profilepage">Mi perfil</string>
    <string name="valentina_lopez_homepage">Valentina Lopez</string>
    <string name="sep_16_09_30_am_homepage">Sep 16, 09:30 AM</string>
    <string name="_20_00_homepage">-$20.00</string>
    <string name="sebastian_martinez_homepage">Sebastian Martinez</string>
    <string name="sep_11_03_45_pm_homepage">Sep 11, 03:45 PM</string>
    <string name="_15_50_homepage">+$15.50</string>
    <string name="mathias_gonzales_homepage">Mathias Gonzales</string>
    <string name="sep_8_01_13_am_homepage">Sep 8, 01:13 AM</string>
    <string name="_50_50_homepage">+$50.50</string>
    <string name="gabriel_morales_homepage">Gabriel Morales</string>
    <string name="sep_1_03_33_am_homepage">Sep 1, 03:33 AM</string>
    <string name="_66_50_homepage">-$66.50</string>
    <string name="lucia_fernandez_homepage">Lucia Fernandez</string>
    <string name="oct_29_09_45_am_homepage">Oct 29, 09:45 AM</string>
    <string name="_09_50_homepage">+$09.50</string>
    <string name="el_lugar_mas_seguro_para_tu_dinero_loginsignuppage">El lugar mas seguro para tu dinero</string>
    <string name="ya_tiene_cuenta_loginsignuppage">Ya tiene cuenta ?</string>
    <string name="crear_cuenta_nueva_loginsignuppage">Crear cuenta nueva</string>
    <string name="nombre_usuario_profilepage">Nombre Usuario</string>
    <string name="mi_informacion_profilepage">Mi informacion</string>
    <string name="mis_tarjetas_profilepage">Mis tarjetas</string>
    <string name="opciones_profilepage">Opciones</string>
    <string name="centro_de_ayuda_profilepage">Centro de ayuda</string>
    <string name="valentina_lopez_requestpage">Valentina Lopez</string>
    <string name="sebastian_martinez_sendpage">Sebastian Martinez</string>
    <string name="crear_cuenta_signuppage">Crear Cuenta</string>
    <string name="ya_tienes_una_cuenta_signuppage">Ya tienes una cuenta??</string>
</resources>