<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    Imagen de fondo con la flecha verde -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_page_background"/>

<!--    El titulo de esta signup page  -->

    <TextView
        android:id="@+id/tlt_signup_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrarse_y_empezar_a_transferir"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/jua"
        android:textSize="35sp"/>

    <!--    El subtitulo de ingresar nombre  -->

    <TextView
        android:id="@+id/txtTitle_nombre_signup_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tlt_signup_page"
        android:text="@string/nombre_signuppage"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/jua"
        android:textSize="14sp"/>

    <!--    La casilla de ingresar nombre  -->

    <EditText
        android:id="@+id/editTextNombre_signup_page"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/txtTitle_nombre_signup_page"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_white"
        android:fontFamily="@font/jua"
        android:inputType="text"
        android:paddingStart="14sp"
        android:paddingEnd="197sp"
        android:text="@string/ingresar_nombre_signuppage"
        android:textColor="#B5B5B5"
        android:textSize="14sp"
        />

    <!--    El subtitulo de ingresar apellido  -->

    <TextView
        android:id="@+id/txtTitle_apellido_signup_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextNombre_signup_page"
        android:text="@string/apellido_signuppage"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/jua"
        android:textSize="14sp"/>

    <!--    La casilla de ingresar apellido  -->

    <EditText
        android:id="@+id/editTextApellido_signup_page"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/txtTitle_apellido_signup_page"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/btn_white"
        android:fontFamily="@font/jua"
        android:inputType="text"
        android:paddingStart="14sp"
        android:paddingEnd="197sp"
        android:text="@string/ingresar_apellido_signuppage"
        android:textColor="#B5B5B5"
        android:textSize="14sp"
        />

    <!--    El subtitulo de ingresar email  -->

    <TextView
        android:id="@+id/txtTitle_email_signup_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextApellido_signup_page"
        android:text="@string/email_signuppage"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/jua"
        android:textSize="14sp"/>

    <!--    La casilla de ingresar email  -->

    <EditText
        android:id="@+id/editTextEmail_signup_page"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/txtTitle_email_signup_page"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/btn_white"
        android:fontFamily="@font/jua"
        android:inputType="textEmailAddress"
        android:paddingStart="14sp"
        android:paddingEnd="197sp"
        android:text="@string/ingresar_email_signuppage"
        android:textColor="#B5B5B5"
        android:textSize="14sp"
        />

    <!--    El subtitulo de ingresar tu contraseña  -->

    <TextView
        android:id="@+id/txtTitle_pass_login_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEmail_signup_page"
        android:text="@string/contrase_a_signuppage"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/jua"
        android:textSize="14sp"/>

    <!--    La casilla de ingresar contraseña  -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_pass_login_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle_pass_login_page"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/btn_white"
            android:fontFamily="@font/jua"
            android:inputType="textVisiblePassword"
            android:paddingStart="14sp"
            android:paddingEnd="197sp"
            android:textSize="14sp"
            android:text="@string/ingresar_tu_contrasenia_signuppage"
            android:textColor="#B5B5B5"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    El subtitulo de reingresar contraseña  -->

    <TextView
        android:id="@+id/txt_reinput_pass_login_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_pass_login_page"
        android:text="@string/title_reingresar_contrasenia_signuppage"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/jua"
        android:textSize="14sp"/>

    <!--    La casilla de reingresar tu contraseña  -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reinput_pass_login_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_reinput_pass_login_page"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_white"
            android:fontFamily="@font/jua"
            android:inputType="textVisiblePassword"
            android:paddingStart="14sp"
            android:paddingEnd="197sp"
            android:textSize="14sp"
            android:text="@string/reingresar_contrase_a_signuppage"
            android:textColor="#B5B5B5"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    Boton login  -->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_loginpage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="59dp"
        android:layout_below="@+id/reinput_pass_login_page"
        android:background="@drawable/btn_azul"
        android:textAllCaps="false"
        android:fontFamily="@font/jua"
        android:text="Crear Cuenta"
        android:textColor="@color/white"/>

    <!--    Boton ya tienes una cuenta  -->

    <Button
        android:id="@+id/btn_create_account_loginpage"
        android:backgroundTint="@color/white"
        android:textColor="@color/blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/btn_login_loginpage"
        android:fontFamily="@font/jua"
        android:text="Ya tienes una cuenta??"
        android:textSize="14sp"
        />




</RelativeLayout>

