<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="106dp"
        android:layout_height = "137dp"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="203dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/jua"
        android:text="@string/el_lugar_mas_seguro_para_tu_dinero_loginsignuppage"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create_account_loginsignuppage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="180dp"
        android:layout_marginRight="30dp"
       android:background="@drawable/btn_celeste"
        android:textAllCaps="false"
        android:fontFamily="@font/jua"
        android:text="@string/crear_cuenta_nueva_loginsignuppage"
        android:textColor="@color/white"/>


    <Button
        android:id="@+id/btn_login_loginsignuppage"
        android:backgroundTint="@color/white"
        android:textColor="@color/blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:fontFamily="@font/jua"
        android:text="@string/ya_tiene_cuenta_loginsignuppage"
        android:textStyle="bold"
        android:textSize="14sp"
        />



</LinearLayout>

